# spix

./: .gitignore  Documentation.md  compileSpixTesting.sh
examples/: CMakeLists.txt
examples/RemoteCtrl/script/: autogui.py  testScript.py
examples/SpixTestingV1/: CMakeLists.txt  README.md  ResultsView.qml  main.cpp  main.qml  main_studio.qml  qml.qrc  workbench_enums.cpp  workbench_enums.h
examples/SpixTestingV1/qml/: ProjectListEntry.qml  ProjectListToolBar.qml  ProjectListView.qml  ProjectListViewRow.qml  ProjectListWindow.qml  WBApplicationWindow.qml  WBBottomRoundedRectangle.qml  WBButton.qml  WBButton01.qml  WBButton02.qml  WBButton03.qml  WBButton04.qml  WBButtonGroup.qml  WBButtonWithModifiers.qml  WBConstants.qml  WBIconButton.qml  WBImage.qml  WBInputFieldBase.qml  WBInputFieldString.qml  WBInputWindow.qml  WBMenu.qml  WBMenuBar.qml  WBMenuItem.qml  WBMenuSeparator.qml  WBMovableBehavior.qml  WBPopup.qml  WBPopupBase.qml  WBPopupMenu.qml  WBResizableBehavior.qml  WBResizableBehaviorTemplate.qml  WBRoundedRectangle.qml  WBRoundedRectangle2.qml  WBTextField.qml  WBToolBar.qml  WBToolBarButton.qml  WBToolBarMenu.qml  WBToolBarMenuContent.qml  WBToolBarSeparator.qml  WBTopRoundedRectangle.qml  WBWindowHeader.qml
examples/SpixTestingV1/script/: autogui.py  spixInteractive  testScript.py
examples/SpixTestingV1/theme/: CustomTheme.qml  DarkTheme.qml  LightTheme.qml  OceanTheme.qml  ThemeManager.qml
lib/: CMakeLists.txt
lib/include/Spix/: TestServer.h
lib/src/: AnyRpcServer.cpp  TestServer.cpp
lib/src/Commands/: ClickAndExpect.cpp  ClickAndExpect.h  Command.cpp  Command.h  CustomCmd.cpp  (+9 more)
(+8 files in other folders)
